--- a/MeteoStyle.css
+++ b/MeteoStyle.css
@@ -453,6 +453,18 @@ h3 {
     border-radius: 10px;
 }
 
+.color-legend-temperature {
+    width: 80%;
+    height: 20px;
+    margin: 20px auto;
+    background: linear-gradient(to right, #ffdbff, #ffd3ff, #ffcbff, #ffc1ff, #ffb7ff, #ffacff, #ffa1ff, #ff97ff, #ff8cff, #ff83ff, #ff7aff, #ff71ff, #ff68ff, #ff5fff, #ff55ff, #ff46f8, #ff3dff, #ff34ff, #ff2cff, #ff20ff, #ff02ff, #ef00f7, #d608e9, #bb14d9, #9b1ac7, #7d1cb6, #5f1ba5, #431796, #2a118a, #140982, #00007f, #000087, #000095, #0000ac, #0000c8, #0100e2, #0200f8, #0012ff, #002cff, #003fff, #0050ff, #0060ff, #0071ff, #0080ff, #0091ff, #00a4ff, #00b8ff, #00ccff, #00e0ff, #00f0ff, #00fdff, #00ffeb, #00ffcf, #00ffac, #00ff82, #00ff51, #00ff09, #4dff00, #78ff00, #9cff00, #bfff00, #deff00, #f4ff02, #fffb00, #ffed00, #ffdb00, #ffc700, #ffb200, #ff9d00, #ff8a00, #ff7a00, #ff6c00, #ff5d00, #ff4f00, #ff4000, #ff2f00, #ff1900, #fc0000, #ec0000, #d70000, #be0000, #a80000, #920000, #800000, #720000, #640000, #560000, #4b0000, #410000, #3b0000, #370000, #380107, #3e0314, #470626, #530739, #5f084d, #6c0662, #770472, #7e007e, #7e007e);
+    border-radius: 10px;
+    border-width: 50px;
+    border-color: rgb(67, 67, 67);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 1.0);
+}
+
+
 
 /*Salīdzinājumi*/
 
@@ -496,4 +508,21 @@ td {
 
 tr:hover {
     background-color: rgb(193, 202, 255);
+}
+
+/*Others*/
+
+.launch-teaser img {
+    border-radius: 8px;
+}
+
+/*MeteoNoverojumuKarte*/
+.sub-header-sateliti {
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(https://fv9-6.failiem.lv/down.php?i=ddmjv2vej&view);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: white;
 }
