--- a/MeteoStyle.css
+++ b/MeteoStyle.css
@@ -116,37 +116,52 @@ nav .fa {
 
 @media(max-width: 700px) {
     .text-box h1 {
-        font-size: 20px;
+      font-size: 20px;
     }
-
+  
     .nav-links ul li {
-        display: block;
+      display: block;
     }
-
+  
     .nav-links {
-        position: absolute;
-        background: rgba(0, 40, 255, 1.0);
-        height: 100vh;
-        width: 200px;
-        top: 0;
-        right: -200px;
-        text-align: left;
-        z-index: 2;
-        transition: 1s;
+      position: absolute;
+      background: rgba(0, 40, 255, 1.0);
+      height: 100vh;
+      width: 200px;
+      top: 0;
+      right: -200px;
+      text-align: left;
+      z-index: 2;
+      transition: 1s;
     }
-
+  
     nav .fa {
-        display: block;
-        color: white;
-        margin: 10px;
-        font-size: 22px;
-        cursor: pointer;
+      display: block;
+      color: white;
+      margin: 10px;
+      font-size: 22px;
+      cursor: pointer;
     }
-
+  
     .nav-links ul {
-        padding: 30px;
+      padding: 30px;
     }
-}
+  
+    .sub-menu {
+      position: relative;
+      z-index: 3;
+    }
+  
+    .nav-links:hover {
+      z-index: 4; /* Increase the z-index value */
+    }
+  
+    .nav-links ul li:hover .sub-menu {
+      right: -200px;
+      z-index: 5; /* Increase the z-index value */
+    }
+  }
+  
 
 .par {
     width: 80%;
