--- a/MeteoStyle.css
+++ b/MeteoStyle.css
@@ -97,6 +97,7 @@ nav img {
     text-decoration: none;
     color: white;
     border: 1px solid white;
+    border-radius: 10px;
     padding: 12px 34px;
     font-size: 13px;
     background: transparent;
@@ -340,7 +341,7 @@ h3 {
     text-decoration: none;
     color: rgb(0, 40, 255);
     border: 1px solid rgb(0, 40, 255);
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 12px 34px;
     margin-top: 25px;
     font-size: 13px;
@@ -363,56 +364,65 @@ h3 {
     }
 }
 
+/*Footer*/
 .footer {
     width: 100%;
     text-align: center;
     padding: 30px 0;
     background-color: rgb(0, 40, 255);
-}
-
-.footer h4 {
-    margin-bottom: 25px;
-    margin-top: 20px;
+    margin-top: 50px; /* Example margin for spacing */
+  }
+  
+  .footer h4 {
+    margin-bottom: 15px;
     font-weight: 600;
     color: white;
-}
-
-.fa-copyright{
+    font-size: 20px;
+    line-height: 1.5;
+  }
+  
+  .footer p {
     color: rgb(200, 200, 200);
-}
-
-.footer p{
-    color: rgb(200, 200, 200);
-}
-
-.icons .fa {
+    font-size: 14px;
+    line-height: 1.3;
+  }
+  
+  .icons {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .icons .fa {
     color: rgb(255, 255, 255);
-    margin: 0 13px;
+    margin: 0 10px;
     cursor: pointer;
-    padding: 18px 0;
-}
-
-.info-col ul {
+    padding: 10px;
+    font-size: 18px;
+  }
+  
+  .info-col ul {
     margin: 0;
     padding: 0;
     list-style-position: inside;
     text-align: left;
-}
-
-.info-col li {
+  }
+  
+  .info-col li {
     margin: 0;
     padding: 4px 0 10px 0px;
-}
-
-.footer a {
+  }
+  
+  .footer a {
     text-decoration: none;
-}
+  }
+  
 
 /*MeteoPar*/
 
 
 .sub-header-par {
-    height: 50vh;
+    height: 30vh;
     width: 100%;
     background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(images/16147796.jpg);
     background-position: center;
@@ -465,7 +475,7 @@ h3 {
 
 
 .sub-header-karte {
-    height: 50vh;
+    height: 30vh;
     width: 100%;
     background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(https://fv9-5.failiem.lv/down.php?i=5mp24rb9w&view);
     background-position: center;
@@ -606,7 +616,7 @@ tr:hover {
 
 /*MeteoNoverojumuKarte*/
 .sub-header-sateliti {
-    height: 50vh;
+    height: 30vh;
     width: 100%;
     background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(https://fv9-6.failiem.lv/down.php?i=ddmjv2vej&view);
     background-position: center;
@@ -617,7 +627,7 @@ tr:hover {
 
 /*MeteoNegaisi*/
 .sub-header-negaisi {
-    height: 50vh;
+    height: 30vh;
     width: 100%;
     background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(https://fv9-4.failiem.lv/down.php?i=bqradv8eu&view);
     background-position: center;
@@ -714,9 +724,28 @@ tr:hover {
     font-family: 'Courier Prime', monospace; 
 }
 
+.video-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 36.25%; /* 16:9 aspect ratio (change if necessary) */
+    max-width: 1523px; /* Adjust the maximum width as per your preference */
+    margin: 0 auto; /* Center the video container horizontally */
+  }
+  
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  
+   
+
 /*MeteoRadars*/
 .sub-header-radars {
-    height: 50vh;
+    height: 30vh;
     width: 100%;
     background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(https://fv9-5.failiem.lv/down.php?i=9e4d5seke&view);
     background-position: center;
@@ -777,7 +806,7 @@ h3 {
 
 /*MeteoChangelog*/
 .sub-header-radars {
-    height: 50vh;
+    height: 30vh;
     width: 100%;
     background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(https://fv9-5.failiem.lv/down.php?i=9e4d5seke&view);
     background-position: center;
